[package]
name = "quanta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Data
tokio = { version = "1.17.0", features = [ "full" ] }
reqwest = { version = "0.11.10", features = [ "json" ] }
serde = "1.0.136"
serde_json = "1.0.79"

# User interface & Terminal stuff
crossterm = "0.23.0"
rpassword = "6.0"
anyhow = "1.0.56"